syntax = "proto3";
package com.vang.grpc;
option java_multiple_files = true;
option java_package = "com.vang.cartservice.command.grpc.gen";
option java_outer_classname = "CartGrpcServer";

service GetCartById {
    rpc getData(GetCartByIdRequest) returns (GetCartByIdReply);
}

service DeleteCartById {
    rpc delete(GetCartByIdRequest) returns (GetCartByIdReply);
}

message GetCartByIdRequest {
    int32 type = 1;
    string request = 2;
}

message GetCartByIdReply {
    bool status = 1;
    string response = 2;
}

message DeleteCartByIdRequest {
    string cartId = 1;
}

message DeleteCartByIdReply {
    string status = 1;
}