syntax = "proto3";
package com.vang.grpc;
option java_multiple_files = true;
option java_package = "com.vang.customerservice.query.service.grpc";
option java_outer_classname = "CustomerGrpc";

service CustomerService {
  rpc login(LoginRequest) returns (LoginReply);
}

service GetCustomerID {
  rpc getInfo(GetCustomerIDRequest) returns (GetCustomerIDReply);
}

service GetCustomerByUsername {
    rpc getData(GetCustomerByUsernameRequest) returns (GetCustomerByUsernameReply);
}

message GetCustomerByUsernameRequest {
    string username = 1;
}

message GetCustomerByUsernameReply {
    bool status = 1;
    string response = 2;
}

message GetCustomerIDRequest {
  string username = 1;
}

message GetCustomerIDReply {
  bool status = 1;
  string response = 2;
}

message LoginRequest {
  string username = 1;
}

message LoginReply {
  string result = 1;
  bool status = 2;
  string password = 3;
  string role = 4;
}